--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.5",
     "body-parser": "~1.13.2",
+    "connect-mongo": "^1.2.0",
+    "cookie": "^0.2.3",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "echarts": "^3.1.9",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
+    "gravatar": "^1.5.2",
+    "mongoose": "^4.4.17",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.6"
   }
 }
