--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "async": "^2.0.0-rc.5",
     "body-parser": "~1.13.2",
+    "bson": "^0.4.23",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^1.2.0",
     "cookie": "^0.2.3",
     "cookie-parser": "~1.3.5",
@@ -16,10 +18,15 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "fs": "0.0.2",
     "gravatar": "^1.5.2",
+    "markdown": "^0.5.0",
     "mongoose": "^4.4.17",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
+    "multer": "^1.1.0",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
+    "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.6"
   }
 }
